tinkering with portfolio page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,6 +193,11 @@ textarea {
 
 /*PORTFOLIO STYLES: */
 
+.portfolio img {
+    display: inline-block;
+    width: 275px;
+    height: 205px;
+}
 
 
 
