--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,7 +199,7 @@ textarea {
     position: relative;
     width: 275px;
     height: 205px;
-    margin: 25px 0;
+    margin-top: 25px;
     display: inline-block;
 }
 
