--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,8 +81,7 @@ nav ul li {
     font-weight: 500;
     padding: 0 10px;
     text-align: center;
-    border-right: 1px solid rgba(0,0,0,0.1);
-    /* transform: rotateX(45deg); */
+    border-right: 1px solid rgba(0,0,0,0.15);
 }
 
 nav ul li:last-child {
@@ -97,6 +96,8 @@ nav a {
 nav a:hover, nav a:focus {
     color: #59d8d2;
     text-decoration: none;
+    transition: color;
+    transition-duration: 1s;
 }
 
 nav a:active {
@@ -211,18 +212,28 @@ textarea {
     height: 205px;
 }
 
-#img-overlay {
+.img-overlay {
     display: flex;
     flex: 1;
     position: relative;
     top: 185px;
     height: 70px;
     text-align: center;
-    background-color:rgba(74, 170, 165, 0.85);
+    background-color:rgb(74, 170, 165);
+    opacity: 0.75;
     z-index: 100;
 }
 
-#img-overlay a {
+.opaque {
+    opacity: 1;
+    transition-property: all;
+    transition-duration: .75s;
+    transform: scale(1.025);
+    border-radius: 5px;
+
+}
+
+.img-overlay a {
     flex: 1;
     padding-top: 22.5px;
     color: #ffffff;
