--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,23 +23,27 @@ body {
     color: #777777;
 }
 
-h1, h2, h3, .port-lg-container {
+h1, h2, h3 {
     font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
-.head {
+header {
+    width: 100%;
     display: flex;
+    margin-bottom: 40px;
     background-color: #ffffff;
     border-bottom: 2.5px solid #cccccc;
-    width: 100%;
+}
+
+.head-content {
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
     min-width: 960px;
     height: 90px;
 }
 
 .name {
-    /* position: relative; */
-    margin-left: 220px;
-    display: inline-block;
     height: 87.5px;
     width: 290px;
     min-width: 260px;
@@ -61,11 +65,10 @@ h2 {
     font-weight: 600;
 }
 
-/*NAVIGATION */
+/*NAVBAR */
 
 nav {
-    margin-left: 450px;
-    width: 250px;
+    width: 275px;
     height: 75px;
     background-color: #ffffff;
 }
@@ -77,10 +80,10 @@ nav ul {
 }
 
 nav ul li {
+    display: flex;
+    width: 125px;
     font-size: 1.8em;
     font-weight: 500;
-    padding: 0 10px;
-    text-align: center;
     border-right: 1px solid rgba(0,0,0,0.15);
 }
 
@@ -89,14 +92,18 @@ nav ul li:last-child {
 }
 
 nav a {
+    margin: auto;
     color: #777777;
     text-decoration: none;
+    transition: all 0.35s;
 }
 
 nav a:hover, nav a:focus {
+    letter-spacing: 1.125px;
+    font-size: 1.025em;
     color: #59d8d2;
     text-decoration: none;
-    transition: color;
+    transition: all;
     transition-duration: 1s;
 }
 
@@ -107,18 +114,21 @@ nav a:active {
 
 /* nav a:visited {color: #AA6B4A;}  */
 
-/*END NAVIGATION */
+/*END NAVBAR*/
 
 main {
     width: 100%;
-    min-height: 725px;
+    min-width: 980px;
+    display: flex;
 }
 
 .content {
-    margin-top: 40px;
-    margin-left: 220px;
+    /* margin-top: 40px;
+    margin-left: 220px; */
+    margin: auto;
     padding: 30px;
     width: 960px;
+    min-width: 540px;
     background-color: #ffffff;
     border: 1px solid #dddddd;
 }
@@ -145,29 +155,30 @@ footer p {
     color: #ffffff;
 }
 
-/*INDEX STYLES: */
+/*HOME PAGE: */
 
 #profilePic {
     float: left;
     margin: 10px 25px 25px 0;
-    border-collapse: separate;
 }
 
 .content p {
     font-size: 1.6em;
     line-height: 2;
-    border-collapse: separate;
 }
 
-/*CONTACT STYLES: */
+/*CONTACT PAGE: */
 
 label {
-    display: block;
-    font-size: 1.6em;
+    font-size: 1.8em;
     padding: 5px;
 }
 
+.form-control {
+    font-size: 1.4em;
+}
 input, textarea {
+    font-size: 22px;
     width: 100%;
     color: #cccccc;
     border: 1px solid #cccccc;
@@ -184,64 +195,62 @@ textarea {
     margin-bottom: 20px;
 }
 
-#submit {
+.contact-submit {
     font-size: 1.8em;
-    width: 115px;
-    background-color: #4aaaa5;
+    width: 125px;
     color: #ffffff;
+    background-color:  #4aaaa5;
     padding: 10px 0;
+    border: none;
 }
 
-/*PORTFOLIO STYLES: */
+/*GALLERY STYLES: */
 
-.row {
+.gal-container {
+    margin: -45px 0 35px 0;
     display: flex;
-    justify-content: space-between;
-    width: 590px;
-}
+    max-width: 620px;
+    flex-wrap: wrap;
 
-.row:first-of-type {
-    margin-top: -42.5px;
-}
-
-.row:last-of-type {
-    margin-bottom: 30px;
 }
 
 .gal-img {
-    height: 205px;
+    height: 210px;
+    margin-right: 35px;
+    width: 275px;
+
 }
 
 .img-overlay {
     display: flex;
     flex: 1;
+    width: 275px;
     position: relative;
     top: 185px;
-    height: 70px;
     text-align: center;
     background-color:rgb(74, 170, 165);
     opacity: 0.75;
     z-index: 100;
+    transition: opacity 0.75s;
 }
 
-.opaque {
+.pop-effect {
     opacity: 1;
-    transition-property: all;
-    transition-duration: .75s;
-    transform: scale(1.025);
+    transition: all 0.75s;
+    /* transition-property: all;
+    transition-duration: .75s; */
+    transform: scale(1.0175);
     border-radius: 5px;
 
 }
 
 .img-overlay a {
     flex: 1;
-    padding-top: 22.5px;
+    line-height: 70px;
     color: #ffffff;
     text-decoration: none;
     font-size: 20px;
 }
-
-
 
 
 
