--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,7 @@ nav a {
 nav a:hover, nav a:focus {
     letter-spacing: 1.0125px;
     font-size: 1.025em;
-    color: #d87093;
+    color: #DD524A;
     text-decoration: none;
     -webkit-transition: all 0.35s;
     -ms-transition: all 0.35s;
@@ -123,7 +123,7 @@ nav a:hover, nav a:focus {
 }
 
 nav a:active {
-    color: #d87093;
+    color: #DD524A;
 }
 
 /*FOOTER: */
